--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# HTTPS
-
-server.port=8443
-server.ssl.key-alias=intenso2
-server.ssl.key-password=mikro123Beta
-server.ssl.key-store=classpath:intenso2.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-type=JKS
+## HTTPS
+#
+#server.port=8443
+#server.ssl.key-alias=intenso2
+#server.ssl.key-password=mikro123Beta
+#server.ssl.key-store=classpath:intenso2.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-type=JKS
